Resolved warning message total discrepancy. We were creating multiple DB records for warnings with multiple pieces.  Now they are combined in a single warning, as they are displayed as red dots with multiple messages. Added segregation and formatting for message parts to make warnings display readable. Added IDS and IPS to Rule3 so that they can be outside the firewall.

--- a/CSETWebNg/src/sass/styles.scss
+++ b/CSETWebNg/src/sass/styles.scss
@@ -1881,6 +1881,14 @@ mat-sidenav {
   height: 200px;
 }
 
+.warning-text>div {
+  margin-bottom: 1rem;
+}
+
+.warning-text>div:last-child {
+  margin-bottom: 0;
+}
+
 // Dialogs
 ///////////////////////////////////////////////////////////////////////
 
